--- a/SecApiReportStructureLoader/SecApiReportStructureLoader.csproj
+++ b/SecApiReportStructureLoader/SecApiReportStructureLoader.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.3.0" />
+    <PackageReference Include="Amazon.Lambda.SQSEvents" Version="2.1.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.3.30" />
   </ItemGroup>
 </Project>
