--- a/SecApiFinancialStatementLoader.Tests/SecApiFinancialStatementLoader.Tests.csproj
+++ b/SecApiFinancialStatementLoader.Tests/SecApiFinancialStatementLoader.Tests.csproj
@@ -6,10 +6,25 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.1.0" />
     <PackageReference Include="Amazon.Lambda.TestUtilities" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Moq" Version="4.18.2" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SecApiFinancialStatementLoader\SecApiFinancialStatementLoader.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="SecApiResponseSamples\ibm-20211231_cal.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SecApiResponseSamples\jnj-20220102_cal.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SecApiResponseSamples\orcl-20220531.xsd">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="SecApiResponseSamples\orcl-20220531_cal.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
